# sharaengine

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  clippy.toml  mkdocs.yml  package.json  rust-toolchain.toml  rustfmt.toml
.github/: commit-message-template.txt
.github/scripts/: generate_changelog.sh  release_changelog.sh
.github/workflows/: auto-format.yml  auto-publish-docs.yml  ci.yml  code-quality.yml  codeql.yml  commitlint-action.yml  gh-pages.yml  release-please.yml  release.yml  standardize.yml  update_changelog.yml
Documentation/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Overview.md  SETUP.md  TASKS.md  TUTORIAL.md  index.md
examples/: simple.rs
src/: engine_core.rs  engine_scripting.rs  lib.rs  main.rs
