[package]
name = "sharaengine"
version = "0.1.0"
edition = "2024"
authors = ["Your Name <you@example.com>"]
description = "Shara Engine — motor de jogos 2D em Rust com integração Lua"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/silas-andrade/sharaengine"
repository = "https://github.com/silas-andrade/sharaengine"
keywords = ["game-engine","rust","lua","2d"]

[dev-dependencies]
tempfile = "3.6"


[dependencies]
# Core/optional crates exposed via features to avoid pulling heavy native deps
glam = { version = "0.30.9", optional = true } # Matemática
kira = { version = "0.11.0", optional = true } # Áudio (native libs)
mlua = { version = "0.11", features = ["lua54"], optional = true } # Scripting
taffy = { version = "0.9.2", optional = true } # UI
wgpu = { version = "28.0.0", optional = true } # Renderização (native)
winit = { version = "0.30.12", optional = true } # Input (native)
pollster = { version = "0.3", optional = true } # Dependência do wgpu

[features]
# Do not enable heavy features by default. Consumers can enable what's needed.
default = []
math = ["glam"]
audio = ["kira"]
scripting = ["mlua"]
ui = ["taffy"]
render = ["wgpu", "winit", "pollster"]
full = ["math", "audio", "scripting", "ui", "render"]
